# tourism-skills

./: .gitignore  .markdownlint.json  README.md
.claude/skills/tour-plan-skill/: SKILL.md
.claude/skills/tour-visual-skill/timed-geo-visual/: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/skills/tour-visual-skill/timed-geo-visual/src/timed_geo_visual/: __init__.py  __main__.py  geocode_google.py  geocode_osm.py  html_template.py  model.py  template.html  timed_geo_visual.py
.claude/skills/tour-visual-skill/timed-geo-visual/tests/: planned-KHH-NGO-CTS.json  test_cli.py  test_geocode_osm.py  test_render.py
